--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "prettier --write . && git add -A ."
+    }
+  },
   "dependencies": {
+    "husky": "^8.0.1",
     "net": "^1.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -21,6 +27,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/sockjs-client": "^1.5.1",
     "@vitejs/plugin-react": "^1.3.0",
+    "prettier": "2.7.1",
     "vite": "^2.9.9"
   }
 }
